Added login and admin page

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,5 +3,5 @@
 
 {% block body %}
     <h1>{{ title }}</h1>
-    <h4>Sorry, but the page you were looking for does not exists.</h4>
+    <p class="lead">Sorry, but the page you were looking for does not exist.</p>
 {% endblock %}
