--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,13 +11,19 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light bg-light rounded" id="navbar">
-            <a class="navbar-brand" href="{{ url_for('index') }}">vsubhuman.com</a>
+            <a class="navbar-brand" href="{{ url('index') }}">vsubhuman.com</a>
             <div class="collapse navbar-collapse justify-content-end" id="nav-content">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">About me</a></li>
                 </ul>
             </div>
         </nav>
+
+        {% if error %}
+            <div class="alert alert-danger">
+                {{ error }}
+            </div>
+        {% endif %}
 
         <div class="container" id="block-body">
             {% block body %}
