--- a/static/layout.css
+++ b/static/layout.css
@@ -1,3 +1,21 @@
-#navbar {
-    margin-bottom: 20px;
+#block-body {
+    padding-top: 20px;
+}
+
+html, body {
+    height: 100%;
+}
+
+#body-container {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -50px;
+    padding-bottom: 50px;
+}
+
+footer {
+    height: 50px;
 }
