--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,14 @@
         <div class="wrapper">
             <nav class="navbar navbar-expand-sm navbar-light bg-light rounded card-header row" id="navbar">
                 <a class="navbar-brand" href="{{ url('index') }}">vsubhuman.com</a>
-                <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+                <div class="collapse navbar-collapse justify-content-start" id="nav-content">
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/vantuz-subhuman" target="_blank">
+                                GitHub
+                                <img class="extern" src="{{ static('extern.png') }}"/>
+                            </a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">About me</a></li>
                     </ul>
                 </div>
@@ -37,7 +43,7 @@
             </div>
         </div>
 
-        <footer class="navbar navbar-expand-sm navbar-light bg-light rounded card-footer footer row" id="navbar">
+        <footer class="navbar navbar-expand-sm navbar-light bg-light rounded card-footer footer row">
             <div class="collapse navbar-collapse justify-content-start">
                 <ul class="navbar-nav">
                     {% set email = 'vantuz-subhuman@yandex.ru' %}
