--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,14 +14,13 @@
     <div class="container" id="body-container">
 
         <div class="wrapper">
-            <nav class="navbar navbar-expand-sm navbar-light bg-light rounded card-header row" id="navbar">
+            <nav class="navbar navbar-expand-sm navbar-light navbar-header row" id="navbar">
                 <a class="navbar-brand" href="{{ url('index') }}">vsubhuman.com</a>
                 <div class="collapse navbar-collapse justify-content-start" id="nav-content">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/vantuz-subhuman" target="_blank">
                                 GitHub
-                                <img class="extern" src="{{ static('extern.png') }}"/>
                             </a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">About me</a></li>
@@ -30,7 +29,7 @@
             </nav>
 
             <div class="row">
-                <div class="container col-8" id="block-body">
+                <div class="container col-7" id="block-body">
                     {% if error %}
                         <div class="alert alert-danger">
                             {{ error }}
@@ -39,12 +38,12 @@
                     {% block body %}
                     {% endblock %}
                 </div>
-                <div class="container col-4"></div>
+                <div class="container col-5"></div>
             </div>
         </div>
 
-        <footer class="navbar navbar-expand-sm navbar-light bg-light rounded card-footer footer row">
-            <div class="collapse navbar-collapse justify-content-start">
+        <footer class="navbar navbar-expand-sm navbar-light navbar-footer footer row">
+            <div class="navbar-collapse justify-content-start">
                 <ul class="navbar-nav">
                     {% set email = 'vantuz-subhuman@yandex.ru' %}
                     <li class="nav-item"><a class="nav-link" href="mailto:{{ email }}">{{ email }}</a></li>
