--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/vantuz-subhuman" target="_blank">
-                                GitHub
+                                GitHub➚
                             </a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">About me</a></li>
