--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <div class="container" id="body-container">
 
         <div class="wrapper">
-            <nav class="navbar navbar-expand-sm navbar-light navbar-header row" id="navbar">
+            <nav class="navbar navbar-expand-md navbar-light navbar-header row" id="navbar">
                 <a class="navbar-brand" href="{{ url('index') }}">vsubhuman.com</a>
                 <div class="collapse navbar-collapse justify-content-start" id="nav-content">
                     <ul class="navbar-nav">
@@ -23,13 +23,29 @@
                                 GitHub➚
                             </a>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url('about') }}">About me</a></li>
                     </ul>
+                </div>
+                <div class="dropdown">
+                    <span class="navbar-toggler-icon dropdown-toggler" id="dropdownMenuButton"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                        <div class="hidden-md-up">
+                            <div class="dropdown-header">Menu</div>
+                            <a class="dropdown-item" href="{{ url('about') }}">All tags</a>
+                            <a class="dropdown-item" href="https://github.com/vantuz-subhuman" target="_blank">GitHub➚</a>
+                            <a class="dropdown-item" href="{{ url('about') }}">Projects</a>
+                            <a class="dropdown-item" href="{{ url('about') }}">About me</a>
+                            <div class="dropdown-divider"></div>
+                        </div>
+                        <div class="dropdown-header">Popular tags</div>
+                    </div>
                 </div>
             </nav>
 
             <div class="row">
-                <div class="container col-7" id="block-body">
+                <div class="container col-md-7" id="block-body">
                     {% if error %}
                         <div class="alert alert-danger">
                             {{ error }}
@@ -38,11 +54,11 @@
                     {% block body %}
                     {% endblock %}
                 </div>
-                <div class="container col-5"></div>
+                <div class="container col-md-5"></div>
             </div>
         </div>
 
-        <footer class="navbar navbar-expand-sm navbar-light navbar-footer footer row">
+        <footer class="navbar navbar-expand navbar-light navbar-footer footer row">
             <div class="navbar-collapse justify-content-start">
                 <ul class="navbar-nav">
                     {% set email = 'vantuz-subhuman@yandex.ru' %}
