--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 
         <div class="wrapper">
             <nav class="navbar navbar-expand-md navbar-light navbar-header row" id="navbar">
-                <a class="navbar-brand" href="{{ url('index') }}">vsubhuman.com</a>
+                <a class="navbar-brand" href="{{ url('') }}">vsubhuman.com</a>
                 <div class="collapse navbar-collapse justify-content-start" id="nav-content">
                     <ul class="navbar-nav">
                         <li class="nav-item">
