--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 {% set title = 'Log in' %}
-{% set login = session.user.login if session.logged_in else None %}
-{% set redirect = request.args.get('redirect') %}
+{% set login = session.user.login if session.logged_in else request.form.get('login', '') %}
+{% set password = request.form.get('password', '') %}
 
 {% block body %}
     <h3>{{ title }}</h3>
-    {% if login %}
+    {% if session.logged_in %}
         <p class="lead">You are already logged in as: <code>{{ login }}</code></p>
         <form action="" type="Submit" method="post">
             <input type="hidden" name="logout" value="true">
@@ -20,16 +20,15 @@
         <form action="" type="Submit" method="post">
             <fieldset class="form-group">
                 <label for="login" class="col-form-label sr-only">Login</label>
-                <input type="text" class="form-control col-5" id="login" name="login" placeholder="Login">
+                <input type="text" class="form-control col-5" id="login" name="login"
+                       placeholder="Login" value="{{ login }}">
             </fieldset>
             <fieldset class="form-group">
                 <label for="password" class="col-form-label sr-only">Password</label>
-                <input type="password" class="form-control col-5" id="password" name="password" placeholder="Password">
+                <input type="password" class="form-control col-5" id="password" name="password"
+                       placeholder="Password" value="{{ password }}">
             </fieldset>
             <fieldset class="form-group">
-                {% if redirect %}
-                    <input type="hidden" name="redirect" value="{{ redirect }}">
-                {% endif %}
                 <button type="submit" class="btn btn-default">Submit</button>
             </fieldset>
         </form>
